nullaway_error_D3B6BA37-ED35-4B6A-AA51-127532F90A66.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/http/codec/xml/Jaxb2XmlDecoder.java:187: error: [NullAway] passing @Nullable parameter 'ex.getMessage()' where @NonNull is required
			throw new DecodingException(ex.getMessage(), ex);
			                                         ^
    (see http://t.uber.com/nullaway )
